# amm-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
data/causality/: activation_inventory.json  artifact_subset_manifest.json  ckpt_factory.json  ckpt_tokens.json  feerev_panelvars.csv  match_feasibility.json  match_stats_cal0.25.json  match_stats_cal0.5.json  match_stats_cal1.json  matched_pairs_cal0.25.json  matched_pairs_cal0.5.json  matched_pairs_cal1.json  panel_weekly_subset_frozen.csv  setfeeprotocol_events.csv
data/manifests/: artifact_manifest.json
data/processed/: arbitrage_repricing.json  arbitrage_repricing_arbitrage.csv  campbell_c0_instrumented.csv  campbell_c1a_e1.csv  campbell_c1a_e1_v10_vacuous_nullcheck.csv  campbell_dynamic_fee_paired_delta.csv  campbell_dynamic_fee_paired_summary.csv  campbell_dynamic_fee_policy_audit.csv  campbell_dynamic_fee_steps.csv  campbell_e5_latency.csv  campbell_fee_sweep.csv  campbell_monte_carlo.csv  (+20 more)
scenarios/: README.md  arbitrage_repricing.toml  campbell_rl_normal.toml  campbell_rl_regime_switch.toml  campbell_rl_toxic_flow.toml  campbell_sim.toml  lp_vs_hold.toml  price_impact_ladder.toml  same_price_different_depth.toml
scripts/: run_all_scenarios.sh
src/: actor.rs  amount.rs  arbitrage.rs  error.rs  ledger.rs  lib.rs  liquidity.rs  lp_accounting.rs  main.rs  pool.rs  scenario.rs  swap.rs  transaction.rs
tests/: event_study_gate.rs  parity_gate.rs  pstt_parity_gate.rs  pstt_prepare_gate.rs  pstt_projection_gate.rs  pstt_staleness_gate.rs  pstt_standalone_gate.rs
(+454 files in other folders)
