[package]
name = "amm-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
csv = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1"
