[package]
name = "amm-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.33"
sha2 = "0.10"
flate2 = "1"

[dev-dependencies]
proptest = "1"
flate2 = "1"
